--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "~4.11.x",
+    "express": "^4.16.3",
     "kerberos": "~0.0.x",
     "parse": "~1.8.0",
     "parse-server": "*"
